--- a/spider/src/main/resources/templates/index.html
+++ b/spider/src/main/resources/templates/index.html
@@ -1,38 +1,15 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>网页转word文档</title>
+    <title>spider</title>
 </head>
 <body>
 <div style="width: 500px;text-align: center;margin: 240px auto">
-    <h1>网页转word文档</h1>
-    <input id="url" style="width: 300px;height: 26px" maxlength="500" autofocus>
-    <button>下载</button>
+
 </div>
 </body>
 <script src="http://code.jquery.com/jquery-2.1.1.min.js"></script>
 <script>
-    $(document).ready(function () {
-        let search = window.location.search;
-        if (search && search.indexOf('=') > -1) {
-            let msg = window.location.search.split('=')[1];
-            if (msg) {
-                alert(decodeURIComponent(msg))
-                window.location.href = window.location.origin + window.location.pathname
-            }
-        }
-        $("button").click(function () {
-            let url = $('#url').val();
-            if (!url || !url.trim()) {
-                alert('请输入网页地址！');
-                return;
-            }
-            if (!url.startsWith('http://') && !url.startsWith('https://')) {
-                alert('请输入正确的网页地址！');
-                return;
-            }
-            window.location.href = 'http://localhost:8084/tool/download?url=' + encodeURIComponent(url);
-        });
-    });
+
 </script>
 </html>
